--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,15 @@
-name: CI
+name: Fly Deploy
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+env:
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
-  test:
-    name: Node.js ${{ matrix.node-version }}
+  deploy:
+    name: Deploy app
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version:
-          - 18
-          - 16
-          - 14
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm test
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
