Add base API route to give metadata about clusters and uptime

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"bson": "^5.0.1",
 		"dotenv": "^16.0.3",
 		"hono": "^3.0.1",
+		"humanize-duration": "^3.28.0",
 		"i": "^0.3.7",
 		"js-yaml": "^4.1.0",
 		"mongodb": "^5.0.1",
